# canary-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  poetry-publish.yml  publish.yml  release.yml
canary_cli/: main.py
