[project]
name = "canary-cli"
version = "0.1.dev0"
description = "command line interface for canary-cd"
authors = [
    { name = "Dominique Rehborn", email = "dominique@rehborn.dev" },
]
readme = "README.md"
license = "Apache-2.0"

requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "humanize (>=4.11.0,<5.0.0)"
]

[project.urls]
# https://peps.python.org/pep-0753/#well-known-labels
documentation = "https://docs.rehborn.dev"
source = "https://github.com/rehborn/canary-cli.git"

[project.scripts]
ccd = "canary_cli.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.9"
pylint = "^3.3.3"

