[project]
name = "canary-cli"
version = "0.1.dev0"
description = "command line interface for canary-cd"
authors = [{ name = "Dominique Rehborn", email = "dominique@rehborn.dev" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "humanize (>=4.11.0,<5.0.0)",
]

[project.urls]
documentation = "https://docs.rehborn.dev"
source = "https://github.com/rehborn/canary-cli.git"

[project.scripts]
ccd = "canary_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.9,<8",
    "pylint>=3.3.3,<4",
]

