[project]
name = "canary-cli"
version = "0.1.dev3"
description = "command line interface for canary-cd"
authors = [{ name = "Dominique Rehborn", email = "dominique@rehborn.dev" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "typer (>=0.17.3,<0.18.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "humanize (>=4.11.0,<5.0.0)",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
[project.urls]
documentation = "https://docs.rehborn.dev"
source = "https://github.com/rehborn/canary-cli.git"

[project.scripts]
canary-cli = "canary_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "canary_cli/",
  "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.9,<8",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]

